<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/making_test"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Making_test">


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textField_password"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/hint_answer4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textField_answer4"
        tools:ignore="MissingConstraints">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textField_answer4"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/hint_answer3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textField_answer3"
        tools:ignore="MissingConstraints">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_answer4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textField_answer3"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/hint_answer2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textField_answer"
        tools:ignore="MissingConstraints">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_answer3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textField_of_qestion"
        android:layout_width="413dp"
        android:layout_height="52dp"
        android:layout_marginTop="62dp"
        android:layout_marginBottom="97dp"
        android:hint="@string/hint_qestion"
        app:layout_constraintBottom_toTopOf="@+id/textField_answer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_of_qestion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textField_answer"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="97dp"
        android:hint="@string/hint_answer1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textField_of_qestion"
        tools:ignore="MissingConstraints">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_answer1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textField_right_answer"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/hint_right_answer"
        app:layout_constraintBottom_toTopOf="@+id/bt_next_qestion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bt_next_answer"
        tools:ignore="MissingConstraints">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_right_answer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/bt_end"
        android:layout_width="179dp"
        android:layout_height="65dp"
        android:layout_marginStart="21dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="19dp"
        android:text="@string/end"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/bt_save" />

    <Button
        android:id="@+id/bt_next_qestion"
        android:layout_width="179dp"
        android:layout_height="65dp"
        android:layout_marginStart="115dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="117dp"
        android:layout_marginBottom="92dp"
        android:text="@string/next_qestion"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textField_right_answer" />

    <Button
        android:id="@+id/bt_next_answer"
        android:layout_width="179dp"
        android:layout_height="65dp"
        android:layout_marginStart="116dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="116dp"
        android:layout_marginBottom="16dp"
        android:text="@string/enter"
        app:layout_constraintBottom_toTopOf="@+id/textField_right_answer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textField_password" />

    <Button
        android:id="@+id/bt_save"
        android:layout_width="179dp"
        android:layout_height="65dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="21dp"
        android:layout_marginBottom="19dp"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/bt_end"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>

